--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,4 +32,20 @@ iframe{
     width: 1220px;
     height: 700px;
     margin-bottom: 15px;
-  }
+}
+@media screen  and (max-width: 768px) {
+
+    @-webkit-keyframes changeColor {
+        14%   {background-color: rgb(134, 95, 95);}
+        86%  {background-color: rgb(167, 167, 117);}
+      }
+    #fundo{
+        background-color: rgb(228, 142, 142);
+        animation: changeColor 3s infinite;
+    }
+
+    #fundocarta{
+        background-image:url(../among.jpg);
+        }
+
+    }
